syntax = "proto3";

option go_package = "github.com/shimodatkh/contest-board/server/proto";

// import "google/protobuf/empty.proto";

package proto;

service ContestBoard {
    // rpc GetMeasurement(GetMeasurementReq) returns (GetMeasurementRes) {}
    rpc PutMeasurement(PutMeasurementReq) returns (PutMeasurementRes) {}
    // rpc GetMeasurements(google.protobuf.Empty) returns (GetMeasurementsRes) {}
    rpc GetMeasurements(GetMeasurementsReq) returns (GetMeasurementsRes) {}
}

message PutMeasurementReq{
    int32 id = 1;
    float score = 2;
}

message PutMeasurementRes{
    int32 id = 1;
    float score = 2;
}

message GetMeasurementsReq{}

message GetMeasurementsRes{
    repeated Measurement measurements = 1;
}

message Measurement{
    int32 id = 1;
    float score = 2;
}